// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListDataView should be fetched data by \`infinite\` 1`] = `
Object {
  "__META__": Object {
    "MODEL_PERSISTED_FIELD": false,
    "collection": undefined,
    "fields": Object {
      "label": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "name": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
    },
    "id": -52,
    "type": "flow.PropertySet",
  },
  "label": "withdrawal",
  "name": "Solutions",
}
`;

exports[`ListDataView should be fetched data by \`page\` 1`] = `
Array [
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -1,
      "type": "flow.PropertySet",
    },
    "label": "Cambridgeshire",
    "name": "Accounts",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -2,
      "type": "flow.PropertySet",
    },
    "label": "withdrawal",
    "name": "Solutions",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -3,
      "type": "flow.PropertySet",
    },
    "label": "Practical Wooden Shirt",
    "name": "mint green",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -4,
      "type": "flow.PropertySet",
    },
    "label": "Falls",
    "name": "pixel",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -5,
      "type": "flow.PropertySet",
    },
    "label": "array",
    "name": "Isle of Man",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -6,
      "type": "flow.PropertySet",
    },
    "label": "Rubber",
    "name": "deploy",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -7,
      "type": "flow.PropertySet",
    },
    "label": "Synergistic",
    "name": "Home Loan Account",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -8,
      "type": "flow.PropertySet",
    },
    "label": "innovate",
    "name": "Checking Account",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -9,
      "type": "flow.PropertySet",
    },
    "label": "Tools",
    "name": "engage",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -10,
      "type": "flow.PropertySet",
    },
    "label": "applications",
    "name": "Dynamic",
  },
]
`;

exports[`ListDataView should be fetched data by \`page\` 2`] = `
Array [
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -11,
      "type": "flow.PropertySet",
    },
    "label": "Small",
    "name": "Soap",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -12,
      "type": "flow.PropertySet",
    },
    "label": "front-end",
    "name": "Auto Loan Account",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -13,
      "type": "flow.PropertySet",
    },
    "label": "Health",
    "name": "reinvent",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -14,
      "type": "flow.PropertySet",
    },
    "label": "firewall",
    "name": "Connecticut",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -15,
      "type": "flow.PropertySet",
    },
    "label": "North Dakota",
    "name": "secured line",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -16,
      "type": "flow.PropertySet",
    },
    "label": "quantify",
    "name": "Auto Loan Account",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -17,
      "type": "flow.PropertySet",
    },
    "label": "Kip",
    "name": "Ameliorated",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -18,
      "type": "flow.PropertySet",
    },
    "label": "Investor",
    "name": "Infrastructure",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -19,
      "type": "flow.PropertySet",
    },
    "label": "Investment Account",
    "name": "West Virginia",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -20,
      "type": "flow.PropertySet",
    },
    "label": "Berkshire",
    "name": "primary",
  },
]
`;

exports[`ListDataView should be fetched data by \`page\` 3`] = `
Array [
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -21,
      "type": "flow.PropertySet",
    },
    "label": "navigate",
    "name": "SQL",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -22,
      "type": "flow.PropertySet",
    },
    "label": "open-source",
    "name": "Supervisor",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -23,
      "type": "flow.PropertySet",
    },
    "label": "info-mediaries",
    "name": "Jordanian Dinar",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -24,
      "type": "flow.PropertySet",
    },
    "label": "Chief",
    "name": "Assurance",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -25,
      "type": "flow.PropertySet",
    },
    "label": "purple",
    "name": "Tasty Rubber Shoes",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -26,
      "type": "flow.PropertySet",
    },
    "label": "capacitor",
    "name": "Cheese",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -27,
      "type": "flow.PropertySet",
    },
    "label": "Metrics",
    "name": "Assurance",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -28,
      "type": "flow.PropertySet",
    },
    "label": "Investment Account",
    "name": "Lilangeni",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -29,
      "type": "flow.PropertySet",
    },
    "label": "Kids",
    "name": "withdrawal",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -30,
      "type": "flow.PropertySet",
    },
    "label": "payment",
    "name": "generate",
  },
]
`;

exports[`ListDataView should be fetched data by \`page\` 4`] = `
Array [
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -31,
      "type": "flow.PropertySet",
    },
    "label": "SDD",
    "name": "multi-state",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -32,
      "type": "flow.PropertySet",
    },
    "label": "Electronics",
    "name": "best-of-breed",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -33,
      "type": "flow.PropertySet",
    },
    "label": "Incredible Granite Gloves",
    "name": "interfaces",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -34,
      "type": "flow.PropertySet",
    },
    "label": "connecting",
    "name": "Assistant",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -35,
      "type": "flow.PropertySet",
    },
    "label": "microchip",
    "name": "Associate",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -36,
      "type": "flow.PropertySet",
    },
    "label": "Oregon",
    "name": "Savings Account",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -37,
      "type": "flow.PropertySet",
    },
    "label": "Computer",
    "name": "Reverse-engineered",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -38,
      "type": "flow.PropertySet",
    },
    "label": "Administrator",
    "name": "Metal",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -39,
      "type": "flow.PropertySet",
    },
    "label": "enhance",
    "name": "Berkshire",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -40,
      "type": "flow.PropertySet",
    },
    "label": "Awesome Metal Mouse",
    "name": "calculating",
  },
]
`;

exports[`ListDataView should be fetched data by \`page\` 5`] = `
Array [
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -41,
      "type": "flow.PropertySet",
    },
    "label": "Cambridgeshire",
    "name": "Accounts",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -42,
      "type": "flow.PropertySet",
    },
    "label": "withdrawal",
    "name": "Solutions",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -43,
      "type": "flow.PropertySet",
    },
    "label": "Practical Wooden Shirt",
    "name": "mint green",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -44,
      "type": "flow.PropertySet",
    },
    "label": "Falls",
    "name": "pixel",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -45,
      "type": "flow.PropertySet",
    },
    "label": "array",
    "name": "Isle of Man",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -46,
      "type": "flow.PropertySet",
    },
    "label": "Rubber",
    "name": "deploy",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -47,
      "type": "flow.PropertySet",
    },
    "label": "Synergistic",
    "name": "Home Loan Account",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -48,
      "type": "flow.PropertySet",
    },
    "label": "innovate",
    "name": "Checking Account",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -49,
      "type": "flow.PropertySet",
    },
    "label": "Tools",
    "name": "engage",
  },
  Object {
    "__META__": Object {
      "MODEL_PERSISTED_FIELD": false,
      "collection": undefined,
      "fields": Object {
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -50,
      "type": "flow.PropertySet",
    },
    "label": "applications",
    "name": "Dynamic",
  },
]
`;
